# wire-adversary-correlator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.testdata/: README.md
analysis/: README.md  ablation.py  compare_systems.py  visualize_shapes.py
collector/: README.md  coordinator.py  label_logger.py  visit_trigger.py
config/: hyperparams.py  infrastructure.py  urls.txt  urls_nym2.txt  urls_nym5_extended.txt  urls_pilot.txt  urls_pilot_nym5.txt  urls_quick_test.txt  urls_quick_test_nym5.txt
model/: README.md  cnn.py  dataset.py  evaluate.py  train.py
preprocessing/: README.md  dataset_builder.py  kde.py  pcap_parser.py  quartet_builder.py  windower.py
scripts/: analyze_pilot_flows.py  analyze_quick_test.py  check_pilot_npz.py  collect_baseline.sh  collect_extended_pilot.sh  collect_full.sh  collect_nym.sh  collect_pilot.sh  collect_pilot_nym.sh  collect_quick_test.sh  collect_tor.sh  collect_vpn.sh  deploy_heavy_html.sh  deploy_nym_watchdog.sh  fix_nym2_routing.sh  gen_500_content.py  generate_500_endpoints.sh  generate_heavy_pages.py  generate_multi_resource_pages.py  github_setup.sh  nym_watchdog.sh  plot_kde_shapes.py  preprocess_all.sh  preprocess_pilot.sh  router_setup.sh  setup_webserver_ports.sh  update_nym_post_connect.sh
tests/: test_dataset.py  test_kde.py  test_windower.py
webserver/pages/: crypto_analytics_1.json  crypto_analytics_2.json  crypto_analytics_3.json  crypto_analytics_4.json  crypto_analytics_5.json  crypto_analytics_6.json  crypto_analytics_7.json  crypto_analytics_8.json  crypto_market_data_1.json  (+196 more)
(+38 files in other folders)
