[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "wire-adversary-correlator"
version = "0.1.0"
description = "End-to-end flow correlation attack on anonymity systems from a passive wire adversary perspective"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "paramiko>=3.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["collector*", "preprocessing*", "model*", "analysis*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
